Bug 495249 - Dark mode is not available on Windows
Summary: Dark mode is not available on Windows
Status: RESOLVED FIXED
Alias: None
Product: lokalize
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Simon Depiets
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-10-23 16:33 UTC by Emir SARI
Modified: 2024-11-19 22:04 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Emir SARI 2024-10-23 16:33:57 UTC
See title. Latest master.
Comment 1 Bug Janitor Service 2024-11-17 10:24:35 UTC
A possibly relevant merge request was started @ https://invent.kde.org/sdk/lokalize/-/merge_requests/180
Comment 2 Luigi Toscano 2024-11-19 22:04:42 UTC
Git commit 8faef77eb50af88643ffcb0bb652007c8f5b2958 by Luigi Toscano, on behalf of Julius Künzel.
Committed on 19/11/2024 at 21:11.
Pushed by ltoscano into branch 'master'.

Initialize style and icon theme properly

Significantely improves the look on non-KDE desktops

M  +1    -1    CMakeLists.txt
M  +1    -0    src/CMakeLists.txt
M  +19   -0    src/main.cpp

https://invent.kde.org/sdk/lokalize/-/commit/8faef77eb50af88643ffcb0bb652007c8f5b2958