Initialize style and icon theme properly

Significantely improves the look on non-KDE desktops

BUG: 495249